--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ai": "^3.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "openai": "^4.47.1",
