--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.13",
     "@ant-design/icons": "^5.3.7",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -17,9 +18,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^3.1.8",
+    "ai": "^3.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dedent": "^1.5.3",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
